# airas-20251113-052758-onda

./: pyproject.toml
.research/: research_history.json
.research/latex/agents4science_2025/: paper.tex  references.bib
.research/prompt/analytic_subgraph/: analytic_node.txt
.research/prompt/create_bibfile_subgraph/: filter_references.txt
.research/prompt/create_code_subgraph/: derive_specific_experiments_exp-main-perf.txt  derive_specific_experiments_exp-robustness-generalisation.txt  generate_base_code.txt  validate_base_code.txt  validate_experiment_code_exp-main-perf.txt  validate_experiment_code_exp-robustness-generalisation.txt
.research/prompt/create_experimental_design_subgraph/: generate_experiment_strategy.txt  generate_experiments.txt
.research/prompt/create_method_subgraph_v2/: evaluate_novelty_and_significance.txt  generate_idea_and_research_summary.txt
.research/prompt/evaluate_experimental_consistency_subgraph/: evaluate_experimental_consistency_exp-main-perf.txt  evaluate_experimental_consistency_exp-robustness-generalisation.txt
.research/prompt/extract_reference_titles_subgraph/: extract_reference_titles_0.txt  extract_reference_titles_1.txt
.research/prompt/generate_queries_subgraph/: generate_queries.txt
.research/prompt/latex_subgraph/: convert_to_latex_str.txt
.research/prompt/retrieve_code_subgraph/: extract_experimental_info_0.txt  extract_github_url_from_text_0.txt
config/: full_experiment.yaml  smoke_test.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
(+3 files in other folders)
